--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,8 @@ venv.bak/
 *.swp
 Session.vim
 *~
+
+# pipenv
+# TODO: remove once the code is stable enough
+#       and requirements are clear!
+Pipfile.lock
